# Haier_robot_ws

./: .gitignore  README.md  robot.rviz  run.sh  run_blazepose.sh  run_project.sh  start_production.sh  start_rotate_service.sh  stop_service.sh
src/BlazeposeRobot/: README.md  function.py  main.py
src/BlazeposeRobot/follower/: robot_follower.py  robot_follower_node.py  target_state_machine.py
src/BlazeposeRobot/motion/: robot_motion.py
src/BlazeposeRobot/utils/: geometry.py
src/BlazeposeRobot/vision/: __init__.py  async_vision.py  config.py  pose_estimator.py  vision_manager.py  vision_processor.py  yolo_detector.py
src/pico_control_V0.5/: README.md  control_api.py  filter_tool.py  remote_control_api.py  vr_arm_control_V0.5.py  vr_arm_control_api.py  vr_server_config.txt  web_control.py
src/pico_control_V0.5/apk/: SystemSettings安卓原生设置.apk
src/pico_control_V0.5/arm_data/: 1.json  test.json  test11.json  举手.json  举手_filtered.json  拿篮子.json  拿篮子_filtered.json  挥手.json  挥手_filtered.json
src/pico_control_V0.5/readme/: README_video_stream.md  pico_contril.md  (+5 more)
src/robot_control_html/: NextJS集成说明.md  package-lock.json  package.json  pnpm-lock.yaml
src/robot_mover/: CMakeLists.txt  package.xml  readme.md  setup.cfg  setup.py
src/robot_mover/robot_mover/: keyboard_teleop.py  mover_node.py  test_rotation.py
src/robot_mover/robot_mover.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/robot_mover/srv/: PauseRotation.srv  Rotate.srv  StopRotation.srv
src/robot_music/: CMakeLists.txt  README.md  __init__.py  package.xml  run_music_player.sh  setup.py
(+36 files in other folders)
